<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    <!-- General strings -->
    <string name="app_name">Radius</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome!</string>
    <string name="next_button">Next</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="copyright">Copyright © 2014 </string>
    <string name="waiting">loading data from server</string>

    <!-- Login-in activity strings -->
    <string name="login">Log In</string>
    <string name="no_account">Don\'t have an account yet? </string>
    <string name="sign_up">Sign Up</string>
    <string name="incorrect_info">Wrong Email address or password</string>
    <string name="keep_logged_in">Keep me logged in</string>
    <string name="forgot_password"><u>Forgot Password</u></string>
    
    <!-- intro_activity strings -->
    <string name="customer_mode">Customer Mode</string>
    <string name="business_mode">Business Mode</string>

    <!-- signup_activity strings -->
    <string name="instructions">Please fill in the details</string>
    <string name="password_confirmation">Password Confirmation</string>
    <string name="email_address">Email Address</string>
    <string name="business_name">Business Name</string>
    <string name="business_type">Business type</string>
    
    <string-array name="business_type_spinner">
        <item>Business type</item>
        <item>Restaurant</item>
        <item>Pub</item>
        <item>Accommodation</item>
        <item>Coffee</item>
        <item>Groceries</item>
    </string-array>
    
    <!--  login / signUp Errors -->
    <string name="connection_failed">Unable to connect.\nPlease check your internet connection.</string>
    <string name="username_missing">Username is missing or incorrect.</string>
    <string name="password_missing">Password is missing or incorrect.</string>
    <string name="validation_failed">Validation failed. Please retry.</string>
    <string name="unknown_error">An Unknown error has occurred.</string>
    
    <!-- signup_activity error strings -->
    <string name="passwords_mismatch">Passwords don\'t match - no new password was set</string>
    <string name="aaemail_address">Email Address</string>
    
    <!--  Forgot password fragment strings -->
    <string name="forgot_password_instructions">Please type in the Email address used when first registered to Radius:</string>
    <string name="email_sent">An Email was sent to the given address</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_email">Please enter an Email address.</string>
    
    

    <!-- business dashboard strings -->
    <string name="comments">Comments</string>
    <string name="your_deal">Your Deal</string>
    <string name="tap_to_enter_deal">Enter your deal here.</string>
    <string name="top_businesses">Top Businesses</string>
    <string name="image_wasnt_loaded">Image wasn\'t loaded, restart screen to try again</string>

    <!-- add a new deal dialog -->
    <string name="add_a_new_deal_dialog_title">Create a new Deal</string>
    <string name="add_a_new_deal_deal_is_empty">A deal cannot be empty</string>
    <string name="add_a_new_deal_deal_identical_to_previous">The new deal is the same as the old one</string>

    <!-- general settings strings -->
    <string name="apply_settings">APPLY SETTINGS</string>
    <string name="new_password">new password</string>
    <string name="new_password_confirmation">new password confirmation</string>
    <string name="new_email">new email</string>
    <string name="data_changed_successfully">Data was successfully changed.</string>
    <string name="new_password_wasnt_set">New passwords mismatched - no new password was set.</string>
    <string name="general_settings">General Settings</string>
    <string name="delete_account">Delete account</string>
    <string name="delete_account_instructions">Are you sure you want to delete your account? \n\n<i>*Note: All your data in both Business and Client mode will be lost.</i></string>
    
    <!-- business Settings strings -->
    <string name="business_settings">Business Settings</string>
    <string name="Location_settings">Location Settings</string>
    <string name="illegal_user_name">Illegal user name was entered.</string>
    <string name="illegal_email">Illegal Email address was entered.</string>
    <string name="illegal_business_name">Illegal business name was entered.</string>
        

    <!-- welcome screen -->
    <string name="welcome_to_radius">Welcome to Radius!</string>

    <!-- business welcome dialogs strings -->
    <string name="welcome_business">In order to complete registration, state your business name, business type, and locate your business on the map.</string>
    <string name="find_location_business_request">Set your business location by tapping on the screen or by searching for an address</string>
    <string name="forgot_to_set_location">No location was selected</string>
    <string name="couldnt_find_address">Couldn\'t find the given address</string>
    <string name="find_location_please_varify">Make sure the location matches the given address. Otherwise - manually locate your business.</string>
    <string name="set_location_imageView">Please define your business location</string>
    <string name="set_business_picture_desc">Select a picture for your business</string>
    
    <string name="likes">Likes</string>
    <string name="dislikes">Dislikes</string>
    <string name="business_name_hint">Business name </string>
    <string name="business_name_forgot_to_fill">State your business name</string>
    <string name="business_type_forgot_to_fill">Select business type</string>
    <string name="business_phone_hint">Business phone number</string>
    <string name="business_address_hint"> Business address</string>
    <string name="button_next">NEXT</string>
    <string name="button_done">DONE</string>
    
    <!-- client welcome dialogs strings -->
    <string name="find_location_client_request">Set your default location by tapping on the screen or by searching for an address</string>
    <string name="set_location">Choose location</string>
    <string name="not_now_btn">Not now</string>
    <string name="finish_btn">Finish</string>
    <string name="welcome_business_fill_details">In order to complete the registration please fill the following details</string>
    <string name="new_location">New home location was set"</string>

    <!-- deal history fragment -->
    <string name="history_fragment_total_likes">   Total likes: </string>
    <string name="history_fragment_total_dislikes">Total dislikes: </string>

    <!-- deal history dialog -->
    <string name="deal_dialog_title">Set a deal from history </string>
    <string name="you_chose_the_deal">You chose the following deal:</string>
    <string name="set_as_current">Post</string>
    <string name="delete_from_hist_dialog">Delete</string>
    
   

    <!-- choose image fragment -->
    <string name="business_choose_image_message">Please choose an image for your business! </string>
    <string name="business_choose_image_title">Choose an image</string>
    <string name="business_choose_image_can_be_done_later">This stage can be completed later on </string>
    <string name="business_choose_image_camera_source">take a picture </string>
    <string name="business_choose_image_gallery_source">open gallery </string>
    <string name="apply_image">Apply</string>
    <string name="cancel_image">Cancel</string>
    <string name="apply_image_error">No image was selected</string>

    <!-- switching between client/user modes -->
    <string name="switch_mode"> Switch mode</string>
    <string name="to_business_mode"> to business mode?</string>
    <string name="to_client_mode"> to client mode?</string>
    <string name="are_you_sure"> are you sure you want to switch</string>
    <string name="switching"> switching</string>
    <string name="log_out"> Log out</string>

    <!-- ShowDeal Activity Strings -->
    <string name="no_like_in_bus_mode">It\'s impossible to rank a deal while on business mode</string>
    <string name="no_deal_currently">This business currently has no deal on display</string>
	<string name="type_comment_here">Leave a comment here</string>
	
    <!-- map -->
    <string name="type_address">Type address here</string>
   

    <string-array name="spinner_options">
        <item>All</item>
        <item>My favourites</item>
        <item>Top businesses</item>
        <item>Top deals</item>
    </string-array>
    
    <!--  Client Comment Fragment -->
    <string name="already_commented">"You've already commented on this deal lately"</string>
    <string name="empty_comment">A comment cannot be empty.</string>
    <string name="comment_submitted">Your comment was submitted, and will soon be published.</string>
    

</resources>