<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/aero"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/instructions_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/signup_margin"
        android:layout_marginTop="19dp"
        android:background="@color/background_signup_textView_aliceBlue"
        android:text="@string/instructions" />

    <EditText
        android:id="@+id/user_name_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/instructions_textView"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/signup_margin"
        android:background="@color/background_signup_textView_aliceBlue"
        android:ems="10"
        android:hint="@string/user_name" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/password_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user_name_textView"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/signup_margin"
        android:background="@color/background_signup_textView_aliceBlue"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/password_confirmation_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_textView"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/signup_margin"
        android:background="@color/background_signup_textView_aliceBlue"
        android:ems="10"
        android:hint="@string/password_confirmation"
        android:inputType="textPassword" />

    
    <EditText
        android:id="@+id/email_address_textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_confirmation_textView"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/signup_margin"
        android:background="@color/background_signup_textView_aliceBlue"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />


    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_address_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:text="@string/sign_up" />

</RelativeLayout>