<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:focusableInTouchMode="true" >

    <LinearLayout
        android:id="@+id/business_welcome_details_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/welcome_business_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/welcome_margin"
            android:text="@string/welcome_business_fill_details"
            android:textColor="@color/white" />

        <EditText
            android:inputType="text"
            android:id="@+id/business_name_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:lines="1"
            android:hint="@string/business_name_hint"
            android:singleLine="true" >
        </EditText>

        <Spinner
            android:id="@+id/business_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" />

        <EditText
            android:id="@+id/business_phone_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/business_phone_hint"
            android:inputType="phone"
            android:singleLine="true">
        </EditText>

        <EditText
            android:id="@+id/business_address_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:hint="@string/business_address_hint"
            android:singleLine="true"
            android:textColor="@color/white" >
        </EditText>
    </LinearLayout>

</RelativeLayout>