<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical" >

    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity = "center"
        android:textColor="#FFFFFFFF"
        android:textSize="17sp"
        android:text="@string/business_choose_image_message"/>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:paddingRight = "20dp"
            android:gravity = "center"
            android:id="@+id/camera_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/choose_image_fragment_button_bg"
            android:drawableRight="@drawable/ic_action_camera"
            android:text="@string/business_choose_image_camera_source" />

        <Button
            android:paddingRight = "20dp"
            android:gravity = "center"
            android:id="@+id/gallery_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:layout_gravity="center"
            android:background="@drawable/choose_image_fragment_button_bg"
            android:drawableRight="@drawable/ic_action_picture"
            android:text="@string/business_choose_image_gallery_source" />
    </LinearLayout>

    <ImageView
        android:layout_marginTop="10dp"
        android:id="@+id/business_choose_image_view"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content" />

</LinearLayout>